test/syntax/05-type_specifier-2-err.c
// ======================================================================

/* type_specifier -> optional_type type */

// ======================================================================

extern int char i;      // error: two types

void main(void)
{
  static char c;

}

// ======================================================================
